--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
+    <script src="sketch.js"></script>
     <style>
       * {
         box-sizing: border-box;
@@ -9,12 +10,17 @@
       html, body {
         margin: 0;
       }
+      canvas {
+        display: block;
+      }
+      #main {
+        display: block;
+        width: 100%;
+        height: 100vh;
+      }
     </style>
   </head>
   <body>
-    <ul>
-      <li><a href="./0/">sketch 0</a></li>
-      <li><a href="./1/">sketch 1</a></li>
-    </ul>
+    <main id="main"></main>
   </body>
 </html>
